samples/_failures_safe/1761707977_9fe53f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5c7ac26.c: In function ‘main’:
./samples/SAFE/__tmp_f5c7ac26.c:155:5: error: expected expression at end of input
  155 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_f5c7ac26.c:155:5: error: expected declaration or statement at end of input
